--- a/src/components/App.css
+++ b/src/components/App.css
@@ -13,6 +13,8 @@
   object-fit: contain;
 
   border-bottom: 1px soli lightgray;
+  display: flex;
+  justify-content: space-between;
 }
 
 .app__headerImage {
@@ -26,4 +28,9 @@
 
   display: flex;
   flex-direction: column;
+}
+
+.app__posts{
+
+  padding: 20px;
 }
